--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nauty-Traces-sys = {git = "https://github.com/firefighterduck/nauty-Traces-sys"}
+kissat-rs = {git = "https://github.com/firefighterduck/kissat-rs", branch = "main" }
