use libffi for better callbacks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 nauty-Traces-sys = {git = "https://github.com/firefighterduck/nauty-Traces-sys"}
 kissat-rs = {git = "https://github.com/firefighterduck/kissat-rs", branch = "main" }
+libffi = "1.0.0"
