--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ kissat-rs = {git = "https://github.com/firefighterduck/kissat-rs", branch = "mai
 libffi = "1.0.0"
 custom_debug_derive = "0.5.0"
 itertools = "0.10.0"
+nom = "6.1.2"
+thiserror = "1.0.24"
