--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ itertools = "0.10.0"
 nom = "6.1.2"
 thiserror = "1.0.24"
 rayon = "1.5.0"
+
+[profile.release]
+debug = true
+lto = "fat"
+codegen-units = 1
+panic = "abort"
