--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "dqg"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Florian Sextl <sextl@in.tum.de>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 nauty-Traces-sys = {git = "https://github.com/firefighterduck/nauty-Traces-sys"}
@@ -21,3 +19,7 @@ debug = true
 lto = "fat"
 codegen-units = 1
 panic = "abort"
+
+[features]
+default = ["statistics"]
+statistics = []
