--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -91,7 +91,10 @@ jobs:
         run:  cargo install flamegraph
 
       - name: Fix settings
-        run:  echo -1 | sudo tee /proc/sys/kernel/perf_event_paranoid
+        run:  echo -1 | sudo tee /proc/sys/kernel/perf_event_paranoid &&
+              sudo chmod 666 /proc/kallsyms &&
+              echo 0 | sudo tee /proc/sys/kernel/kptr_restrict
+
 
       - name: Install nauty
         run: sudo apt-get install nauty libnauty2-dev -y
