--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dqg"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Florian Sextl <sextl@in.tum.de>"]
 edition = "2018"
 
@@ -12,15 +12,10 @@ custom_debug_derive = "0.5.0"
 itertools = "0.10.0"
 nom = "6.1.2"
 thiserror = "1.0.24"
-rayon = "1.5.0"
+structopt = "0.3.21"
 
 [profile.release]
 debug = true
 lto = "fat"
 codegen-units = 1
 panic = "abort"
-
-[features]
-default = ["statistics"]
-statistics = []
-full-statistics = ["statistics"]
