--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0.26"
 structopt = "0.3.21"
 num = "0.4.0"
 rayon = "1.5.1"
+flussab-cnf = "0.2.0"
 
 [profile.release]
 debug = true
